--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,6 +6,11 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @mobile {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
    
     
     .text-content {
@@ -56,6 +61,9 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
-    }
+
+      
+      }
+    
   }
 }// home
