--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,15 @@
 // Mixins in here
+
+.btn{
+    height: 4.5rem;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: @button-bg;
+    border: 1px solid grey;
+    border-radius: 15px;
+    color: white;
+}
+
+@mobile: (max-width: 500px);
