--- a/less/navigation.less
+++ b/less/navigation.less
@@ -44,7 +44,7 @@ header {
     .header_border {
         width: 100%; 
         margin: 0;
-        border: 1px dashed @silver;
+        border: 1px dashed @navigation-border;
         height: 1px;
     }
 
@@ -70,7 +70,7 @@ header {
         p {
             padding-bottom: 1.5em;
         }
-        
+
         @media @mobile {
             width: 90%;
         }
