--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,3 @@
-.btn {
-  height: 4.5rem;
-  width: 85%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #17A2B8;
-  border: 1px solid grey;
-  border-radius: 15px;
-  color: white;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -274,15 +263,36 @@ header .text-description p {
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 90%;
+    justify-self: center;
+    margin: 0 auto;
+    padding-top: 3rem;
+  }
+  .home .content-section .text-content p {
+    font-size: 1.6rem;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -290,6 +300,15 @@ header .text-description p {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    width: 90%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin: 0 auto;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -303,6 +322,17 @@ header .text-description p {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -312,7 +342,47 @@ header .text-description p {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 30px;
+  }
+}
+.home .content-pick .destination .btn {
+  height: 4.5rem;
+  width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #17A2B8;
+  border: 1px solid grey;
+  border-radius: 15px;
+  color: white;
+  font-size: 1.6rem;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+    padding-top: 5px;
+  }
+  .home .content-pick .destination .btn p {
+    font-size: 1.8rem;
+  }
 }
