--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,17 +10,38 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
     }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 90%;
+        justify-self: center;
+        margin: 0 auto;
+        padding-top: 3rem;
+
+        p {
+          font-size: 1.6rem;
+        }
+      }
+
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+      }
 
       img {
         border-radius: 10px;
@@ -31,6 +52,14 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile {
+      width: 90%;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      margin: 0 auto;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -47,6 +76,17 @@
     width: 75%;
     margin: 0 auto 30px;
 
+
+    @media @mobile {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -58,11 +98,41 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
 
+      @media @mobile {
+        width: 80%;
+        margin: 0 auto;
+        padding-bottom: 30px;
+      }
       
+      .btn {
+
+        .btn();
+        
+        @media @mobile {
+          width: 100%;
+          margin: 0 auto;
+          text-align: center;
+          justify-content: center;
+          padding-top: 5px;
+          
+          p{
+            font-size: 1.8rem;
+          }
+        }
+      }
+
       }
     
   }
