--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 // Mixins in here
 
-.btn(@font-size: 1.6rem) {
+.btn(@font-size: 1.8rem) {
     height: 4.5rem;
     width: 85%;
     display: flex;
@@ -11,6 +11,12 @@
     border-radius: 15px;
     color: white;
     font-size: @font-size; 
+    
+    p{
+        margin: 0 auto;
+        text-align: center;
+        
+    }
 }
 
 @mobile: (max-width: 500px);
