--- a/less/home-page.less
+++ b/less/home-page.less
@@ -134,6 +134,43 @@
       }
 
       }
-    
   }
+
+
 }// home
+
+.form {
+  margin: 0 auto;
+  display: flex;
+  max-width: 800px;
+  align-items: center;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 2rem;
+
+
+  p{
+    width: 25%;
+    padding-left: 2rem;
+    align-self: flex-start;
+  }
+
+
+  .input1 {
+    padding: 12px 2px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: 1rem;
+    padding-bottom: 1rem;
+  }
+
+
+  .input2 {
+    padding: 120px 2px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: 1rem;
+    padding-bottom: 1rem;
+  }
+
+}
